N62.4.1.01 Start Depth filters. imageInputAttributeKeys modified to include attrbutes defined with class CIImage in addition to the type.

--- a/Surreality/Main.storyboard
+++ b/Surreality/Main.storyboard
@@ -9,7 +9,7 @@
         <!--Main Filter Controller-->
         <scene sceneID="DqE-Gr-IQA">
             <objects>
-                <tableViewController storyboardIdentifier="FilterTable" useStoryboardIdentifierAsRestorationIdentifier="YES" id="VNd-gL-KQM" customClass="PGLMainFilterController" customModule="Glance" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="FilterTable" useStoryboardIdentifierAsRestorationIdentifier="YES" id="VNd-gL-KQM" customClass="PGLMainFilterController" customModule="Surreality" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" contentInsetAdjustmentBehavior="scrollableAxes" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9hY-uE-9WF">
                         <rect key="frame" x="0.0" y="0.0" width="551" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
@@ -91,7 +91,7 @@
         <!--Image Controller-->
         <scene sceneID="8Cz-fE-dCl">
             <objects>
-                <viewController storyboardIdentifier="PGLImageController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Cot-0o-SSg" customClass="PGLImageController" customModule="Glance" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PGLImageController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Cot-0o-SSg" customClass="PGLImageController" customModule="Surreality" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="EJI-ec-Z2e"/>
                         <viewControllerLayoutGuide type="bottom" id="CVu-JS-I30"/>
@@ -223,12 +223,12 @@
         <!--Rectangle Controller-->
         <scene sceneID="Rbc-Iu-llg">
             <objects>
-                <viewController storyboardIdentifier="RectangleController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="0s2-K9-Juh" customClass="PGLRectangleController" customModule="Glance" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RectangleController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="0s2-K9-Juh" customClass="PGLRectangleController" customModule="Surreality" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wTg-zf-dvd"/>
                         <viewControllerLayoutGuide type="bottom" id="lrB-jY-RdT"/>
                     </layoutGuides>
-                    <view key="view" opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" id="564-Ze-R9G" customClass="PGLFramedView" customModule="Glance" customModuleProvider="target">
+                    <view key="view" opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" id="564-Ze-R9G" customClass="PGLFramedView" customModule="Surreality" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="551" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -291,7 +291,7 @@
         <!--Images Select Container-->
         <scene sceneID="wdk-jU-kPG">
             <objects>
-                <viewController id="2XN-h9-RTP" customClass="PGLImagesSelectContainer" customModule="Glance" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="2XN-h9-RTP" customClass="PGLImagesSelectContainer" customModule="Surreality" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="sNu-Gu-IP8"/>
                         <viewControllerLayoutGuide type="bottom" id="Tg7-pC-Cny"/>
@@ -366,7 +366,7 @@
         <!--RootSplit-->
         <scene sceneID="nHH-rO-VOb">
             <objects>
-                <splitViewController title="RootSplit" id="vbC-U8-P9f" customClass="PGLSplitViewController" customModule="Glance" customModuleProvider="target" sceneMemberID="viewController">
+                <splitViewController title="RootSplit" id="vbC-U8-P9f" customClass="PGLSplitViewController" customModule="Surreality" customModuleProvider="target" sceneMemberID="viewController">
                     <connections>
                         <segue destination="sz9-Js-XAp" kind="relationship" relationship="detailViewController" id="DCq-97-jjZ"/>
                         <segue destination="8fb-qg-1Kn" kind="relationship" relationship="masterViewController" id="Sw7-lT-GVy"/>
@@ -379,7 +379,7 @@
         <!--Photos-->
         <scene sceneID="XU8-jt-lPj">
             <objects>
-                <tableViewController storyboardIdentifier="MasterViewController" title="Photos" useStoryboardIdentifierAsRestorationIdentifier="YES" clearsSelectionOnViewWillAppear="NO" id="rdd-Ke-TzN" customClass="PGLImageCollectionMasterController" customModule="Glance" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="MasterViewController" title="Photos" useStoryboardIdentifierAsRestorationIdentifier="YES" clearsSelectionOnViewWillAppear="NO" id="rdd-Ke-TzN" customClass="PGLImageCollectionMasterController" customModule="Surreality" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Photos" id="QHw-X5-5aw">
                         <barButtonItem key="leftBarButtonItem" title="&lt; Back" style="done" id="Uar-BK-BU7" userLabel="BackBtn">
@@ -397,7 +397,7 @@
         <!--Open Stack View Controller-->
         <scene sceneID="qZS-UY-UVq">
             <objects>
-                <viewController storyboardIdentifier="openStackController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="bcH-i3-LcJ" customClass="PGLOpenStackViewController" customModule="Glance" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="openStackController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="bcH-i3-LcJ" customClass="PGLOpenStackViewController" customModule="Surreality" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="yOX-bb-Rdw"/>
                         <viewControllerLayoutGuide type="bottom" id="XfF-Q9-z3o"/>
@@ -446,7 +446,7 @@
         <!--Asset Controller-->
         <scene sceneID="GxD-2q-YeU">
             <objects>
-                <viewController id="t1n-aW-YzS" customClass="PGLAssetController" customModule="Glance" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="t1n-aW-YzS" customClass="PGLAssetController" customModule="Surreality" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="30B-gu-KO4"/>
                         <viewControllerLayoutGuide type="bottom" id="VLb-a3-ytY"/>
@@ -533,7 +533,7 @@
         <!--Metal Controller-->
         <scene sceneID="31t-u1-PFW">
             <objects>
-                <viewController storyboardIdentifier="MetalController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="kZU-WZ-KCQ" customClass="PGLMetalController" customModule="Glance" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MetalController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="kZU-WZ-KCQ" customClass="PGLMetalController" customModule="Surreality" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="7ws-mv-fuy"/>
                         <viewControllerLayoutGuide type="bottom" id="Jrg-JV-ffE"/>
@@ -551,7 +551,7 @@
         <!--Asset Sequence Controller-->
         <scene sceneID="021-HB-tph">
             <objects>
-                <viewController id="85J-B1-Ou1" customClass="PGLAssetSequenceController" customModule="Glance" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="85J-B1-Ou1" customClass="PGLAssetSequenceController" customModule="Surreality" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="N6t-ad-6Ji"/>
                         <viewControllerLayoutGuide type="bottom" id="noZ-c1-sxH"/>
@@ -572,7 +572,7 @@
         <!--Asset Grid Controller-->
         <scene sceneID="SAl-n8-pfO">
             <objects>
-                <viewController id="0Eu-a7-58l" customClass="PGLAssetGridController" customModule="Glance" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="0Eu-a7-58l" customClass="PGLAssetGridController" customModule="Surreality" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Q1k-Ii-dcp"/>
                         <viewControllerLayoutGuide type="bottom" id="RMh-Hm-vBq"/>
@@ -593,17 +593,17 @@
         <!--ParmSettings-->
         <scene sceneID="nHe-e3-ukU">
             <objects>
-                <viewController storyboardIdentifier="ParmSettingsViewController" title="ParmSettings" id="VjG-Q1-3mN" customClass="PGLSelectParmController" customModule="Glance" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ParmSettingsViewController" title="ParmSettings" id="VjG-Q1-3mN" customClass="PGLSelectParmController" customModule="Surreality" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="KnY-4y-Zdr"/>
                         <viewControllerLayoutGuide type="bottom" id="B3Z-Ou-0MT"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="yRh-nH-8rC">
-                        <rect key="frame" x="0.0" y="0.0" width="551" height="784"/>
+                        <rect key="frame" x="0.0" y="0.0" width="551" height="734"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="OEz-3T-9Rf">
-                                <rect key="frame" x="0.0" y="734" width="551" height="44"/>
+                                <rect key="frame" x="0.0" y="684" width="551" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
                                     <barButtonItem title="upChevron" image="chevron.up" catalog="system" id="A6h-K5-gwp">
@@ -633,7 +633,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="770" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="qzX-VM-dr8">
-                                <rect key="frame" x="0.0" y="18" width="551" height="716"/>
+                                <rect key="frame" x="0.0" y="18" width="551" height="666"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="parmSectionHeader" editingAccessoryType="disclosureIndicator" textLabel="ea4-B7-xyI" detailTextLabel="S19-xP-cfG" style="IBUITableViewCellStyleValue1" id="wng-mG-QUf">
@@ -684,7 +684,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="parmSliderInputCell" textLabel="pbp-I2-VDf" detailTextLabel="aKE-Xj-Sin" style="IBUITableViewCellStyleValue1" id="ez7-dJ-DTc" userLabel="parmSliderInputCell" customClass="PGLTableCellSlider" customModule="Glance" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="parmSliderInputCell" textLabel="pbp-I2-VDf" detailTextLabel="aKE-Xj-Sin" style="IBUITableViewCellStyleValue1" id="ez7-dJ-DTc" userLabel="parmSliderInputCell" customClass="PGLTableCellSlider" customModule="Surreality" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="115" width="551" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ez7-dJ-DTc" id="uvh-Qg-4z2">
@@ -813,7 +813,7 @@
         <!--Stack Controller-->
         <scene sceneID="dfj-In-sbB">
             <objects>
-                <tableViewController storyboardIdentifier="StackController" id="dDm-tJ-e98" customClass="PGLStackController" customModule="Glance" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="StackController" id="dDm-tJ-e98" customClass="PGLStackController" customModule="Surreality" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="djp-vO-L7b">
                         <rect key="frame" x="0.0" y="0.0" width="551" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -897,7 +897,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Fbq-A6-ZwM"/>
+        <segue reference="hGW-uD-Bfy"/>
         <segue reference="9zd-rM-3PO"/>
         <segue reference="8dR-Nq-8eW"/>
     </inferredMetricsTieBreakers>
